# programmiersprachen-raytracer

framework/: Nochmehr Brainstorming  box.cpp  box.hpp  color.hpp  material.hpp  ray.hpp  renderer.cpp  renderer.hpp  shape.cpp  shape.hpp  sphere.cpp  sphere.hpp
source/: Aufgabe6.5  CMakeLists.txt  aufgabe6.5.cpp
tests/: CMakeLists.txt  main.cpp
